# feature-skills-webapp

./: .feature-workflow.toml  .gitignore  CLAUDE.md  README.md  conftest.py  features.md  pyproject.toml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-07T12-19-19-723Z.yml  page-2026-06-07T12-20-03-983Z.yml  page-2026-06-07T12-21-06-175Z.yml  page-2026-06-07T12-21-51-614Z.yml  page-2026-06-07T12-22-41-939Z.yml  page-2026-06-07T12-22-54-037Z.yml
docs/features/agent-submission-api/: context.md  plan.md  requirements.md
docs/features/agent-submission-mcp-facade/: context.md
docs/features/agent-submission-tracker-ops/: plan.md  requirements.md
docs/features/api-coherence/: context.md  plan.md  requirements.md
docs/features/decouple-diff-baseline/: context.md  plan.md  requirements.md
docs/features/doc-discovery/: context.md  plan.md  requirements.md
docs/features/doc-presentation-contract/: context.md  plan.md  requirements.md
docs/features/doc-view/: plan.md  requirements.md
docs/features/document-archive-api/: context.md  plan.md  requirements.md
docs/features/event-driven-synthesis-wait/: context.md  plan.md  requirements.md
docs/features/extra-pages/: context.md  plan.md  requirements.md
docs/features/feature-archive-semantics/: context.md  plan.md  requirements.md
docs/features/flagged-inbox-diff/: context.md  plan.md  requirements.md
docs/features/inbox-view/: plan.md  requirements.md
docs/transitions/: api-coherence.md
feature_skills_webapp/: cli.py  cli_test.py  config.py  config_test.py  server.py  server_test.py
feature_skills_webapp/storage/: db.py  db_test.py  doc_content.py  doc_content_test.py  doc_diff.py  doc_diff_test.py  doc_render.py  doc_render_test.py  documents.py  documents_test.py  events.py  inbox.py  inbox_test.py  parents.py  parity.py  parity_test.py  read_state.py  read_state_test.py  retro_findings.py  retro_findings_test.py  tracker.py  tracker_test.py  versions.py  versions_test.py  walker.py  walker_test.py
feature_skills_webapp/web/: app.py  broadcaster.py  broadcaster_test.py  comments.py  comments_test.py  db_dep.py  discovery.py  discovery_test.py  doc_view.py  doc_view_test.py  events.py  events_test.py  feature_page.py  feature_page_test.py  openapi.py  openapi_test.py  project_page.py  project_page_test.py  retro_findings.py  retro_findings_test.py  routes.py  routes_test.py  static_assets_test.py  submit.py  submit_test.py  synthesis.py  synthesis_test.py  synthesis_wait_test.py  tracker.py  tracker_test.py
systemd/: feature-skills-webapp.service
(+58 files in other folders)
