[project]
name = "feature-skills-webapp"
version = "0.1.0"
description = "Companion webapp for feature-skills"
requires-python = ">=3.14"
dependencies = [
    "starlette>=0.37",
    "jinja2>=3.1",
    "uvicorn>=0.30",
]

[project.scripts]
feature-skills-webapp = "feature_skills_webapp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3",
    "pytest-socket>=0.7",
    "httpx>=0.27",
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feature_skills_webapp"]
exclude = ["*_test.py", "test_*.py"]

[tool.pytest.ini_options]
testpaths = ["feature_skills_webapp", "conftest.py"]
python_files = ["*_test.py", "test_*.py"]
addopts = "--import-mode=importlib -n auto --disable-socket --allow-unix-socket"
xfail_strict = true
strict_markers = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
exclude = []

[tool.uv]
exclude-newer = "P14D"
